--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -160,7 +160,7 @@
                     <div style="display:block;" class="salutation-wrapper">Hey <span class="name-salutation">Timos!</span><a href="javascript:void(0);" class="pencil"></a></div>
                 </li>
                 <li>
-                    <a style="display:none;" class="next-btn" ng-class="{inactive: main.currentAvatar.name === '' || main.currentAvatar.name === undefined || main.currentAvatarIndex === main.totalAvatars}" href="" ng-click="main.rightArrowClick()"></a><!--added class-->
+                    <a class="next-btn" ng-class="{inactive: main.currentAvatar.name === '' || main.currentAvatar.name === undefined || main.currentAvatarIndex === main.totalAvatars}" href="" ng-click="main.rightArrowClick()"></a><!--added class-->
                 </li>
             </ul>
             <div class="clearfix"></div>
