--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -211,7 +211,7 @@ a:hover, a:focus{
     text-decoration:none;
 }
 #tabs .tab-pane-style {
-    width: 60%;
+    // width: 60%;
     background-color: #fcfcfa;
     padding:0 20px;
     position: relative;
@@ -283,12 +283,13 @@ padding-left:20px;
     display:none;
 }
 #tabs .tab-pane-style label{
-    width:142px;
-    height:142px;
+    width: 45%;
+    //height:142px;
+    height: 130px;
     background-color:#fff;
     cursor: pointer;
     margin:0 0 14px 0;
-    line-height:142px;
+    //line-height:142px;
     overflow:hidden;
     text-align:center;
 }
