--- a/public/css/main.css
+++ b/public/css/main.css
@@ -969,3 +969,6 @@ input[type="radio"]:checked + label.color-thumb {
     font-size: 14px; }
   .header-info a.pencil {
     left: 6px; } }
+
+.ghost {
+  opacity: 0 !important; }
