--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -157,7 +157,7 @@
                 <li>
                     <!-- MGS: Input was connected to angular -->
                     <input style="display:none;" type="text" class="" id="avatar-name-input" placeholder="TIMOS" ng-model="main.currentAvatar.name" required autofocus="true">
-                    <div style="display:block;" class="salutation-wrapper" ng-show="main.currentAvatar.name !== ''">Hey <span ng-bind="main.currentAvatar.name"name-salutation">Timos!</span><a href="javascript:void(0);" class="pencil"></a></div>
+                    <div style="display:block;" class="salutation-wrapper" ng-class="{ghost: !main.currentAvatar.name || main.currentAvatar.name === ''}">Hey <span ng-bind="main.currentAvatar.name" name="salutation">Timos!</span><a href="javascript:void(0);" class="pencil"></a></div>
                 </li>
                 <li>
                     <a class="next-btn" ng-class="{inactive: main.currentAvatar.name === '' || main.currentAvatar.name === undefined || main.currentAvatarIndex === main.totalAvatars}" href="" ng-click="main.rightArrowClick()"></a><!--added class-->
