--- a/public/css/main.css
+++ b/public/css/main.css
@@ -288,10 +288,9 @@ body {
   background-color: #e95b4d; }
 
 #tabs li {
-  text-align: center;
-  /*padding: 25px 5px;*/
-  padding: 13px 5px;
-  margin: 6px 6px 6px 0; }
+  margin: 6px 0;
+  padding: 13px 10px;
+  text-align: left; }
 
 #tabs li a {
   color: rgba(255, 254, 253, 0.7);
@@ -529,6 +528,10 @@ input#avatar-name-input {
   border-bottom-color: #e0194d;
   border-width: 13px;
   margin-left: -13px; }
+
+.date-input {
+  background: #fff url("/img/down_arrow.png") no-repeat scroll 95% center;
+  padding: 10px 47px 10px 20px; }
 
 /*SLIDER*/
 #slider {
@@ -789,7 +792,8 @@ input#avatar-name-input {
 #bottomPartWrapper .w-col-md-4 a.skip-btn {
   color: rgba(233, 91, 77, 0.5);
   font-size: 12px;
-  font-weight: 500; }
+  font-weight: 500;
+  display: block; }
 
 input[type="radio"] {
   display: none; }
@@ -839,11 +843,11 @@ input[type="radio"]:checked + label.color-thumb {
     width: 50%; }
   #tabs > ul, .tabs-btn-wrapper .tab-btn-clear {
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     width: 40%; }
   #tabs .tab-pane-style, .tabs-btn-wrapper .tab-btn-save {
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     width: 60%; }
   .tab-pane .ng-scope {
     text-align: center; }
@@ -852,7 +856,7 @@ input[type="radio"]:checked + label.color-thumb {
     max-width: 142px;
     width: 100%;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
+    box-sizing: border-box; }
   #tabs .tab-pane-style div:nth-child(2n+1) label.body-part-label {
     float: none;
     margin-left: auto;
@@ -881,6 +885,8 @@ input[type="radio"]:checked + label.color-thumb {
     width: 100%; }
   .character-wrapper.container {
     padding-bottom: 0; }
+  .character-wrapper.container.pfpreview {
+    padding-bottom: 90px; }
   .tab-btn-save > a {
     width: 57%; } }
 
@@ -947,15 +953,22 @@ input[type="radio"]:checked + label.color-thumb {
     width: 100%;
     float: none; }
   .steps-menu {
-    margin-top: 30px; } }
+    margin-top: 30px; }
+  .tab-btn-save > a {
+    width: 80%;
+    top: 23px; } }
 
 @media (max-width: 395px) {
   #tabs > ul {
-    width: 100%; }
+    width: 100%;
+    padding: 15px 0; }
   #tabs li {
-    padding: 5px; }
+    padding: 5px;
+    margin: 0;
+    text-align: center; }
   #tabs li a {
-    line-height: 17px; }
+    line-height: 12px;
+    font-size: 18px; }
   #tabs .tab-pane-style {
     width: 100%; }
   .salutation-wrapper {
@@ -972,3 +985,321 @@ input[type="radio"]:checked + label.color-thumb {
 
 .ghost {
   opacity: 0 !important; }
+
+/*****************************************/
+/***********pfpreview*********************/
+/*****************************************/
+.pfpreview {
+  overflow: hidden; }
+
+.pfpreview .input-container {
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  width: 430px; }
+
+.pfpreview > .header-info {
+  left: auto;
+  position: relative;
+  text-align: left;
+  top: 0;
+  width: 100%;
+  overflow: hidden; }
+
+.pfpreview .header-info input {
+  width: 100%; }
+
+.pfpreview .header-info a {
+  top: 13px; }
+
+.pfpreview .header-info a.pencil {
+  left: 5%;
+  top: 22px; }
+
+.characters-result-info {
+  overflow: hidden; }
+
+.social-menu {
+  width: 14%;
+  max-width: 130px;
+  float: left;
+  padding-top: 10%; }
+
+.social-menu a {
+  display: block;
+  width: 62px;
+  height: 62px;
+  margin: 0 auto 14px auto; }
+
+.character-all-photo {
+  width: 86%;
+  max-width: 830px;
+  float: left; }
+
+.character-all-photo img {
+  width: 100%;
+  max-width: 830px; }
+
+.footer-btn.edit-btn {
+  background-color: #fff;
+  color: rgba(233, 91, 77, 0.9);
+  border: 1px solid #f4ada6; }
+
+.footer-btn.edit-btn:hover, .footer-btn.edit-btn:focus {
+  opacity: 0.8; }
+
+@media (max-width: 800px) {
+  .social-menu {
+    float: none;
+    margin: auto;
+    max-width: 292px;
+    overflow: hidden;
+    padding-top: 6%;
+    width: 100%; }
+  .social-menu a {
+    display: block;
+    float: left;
+    margin: 0 14px 0 0; }
+  .social-menu a:last-child {
+    margin: 0; }
+  .character-all-photo {
+    float: none;
+    margin: auto;
+    max-width: 830px;
+    width: 100%; } }
+
+@media (max-width: 650px) {
+  .pfpreview .input-container {
+    max-width: 430px;
+    width: 100%; } }
+
+@media (max-width: 500px) {
+  .social-menu a {
+    margin: 0 6% 0 0;
+    width: 20%; }
+  .social-menu a img {
+    width: 100%;
+    height: auto; } }
+
+@media (max-width: 380px) {
+  .pfpreview > .header-info {
+    overflow: unset; }
+  .pfpreview .header-info a {
+    right: -15px;
+    top: 15px; } }
+
+.flip-book-info .text-container {
+  font-size: 28px;
+  font-weight: 300;
+  color: rgba(3, 46, 88, 0.9);
+  text-align: center;
+  line-height: 32px;
+  padding: 16px 0 9px 0; }
+
+.flip-book-info strong {
+  font-weight: 400; }
+
+.flipbook {
+  margin: auto;
+  max-width: 1008px;
+  position: relative;
+  width: 100%;
+  z-index: 200; }
+
+.flipbook .flipbook-placeholder {
+  width: 50%;
+  height: auto;
+  opacity: 0; }
+
+.flipbook .page-wrapper {
+  overflow: hidden;
+  z-index: 200; }
+
+.flipbook .page {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  float: left;
+  top: 0;
+  bottom: auto;
+  z-index: 200; }
+
+.flipbook .page:nth-child(2n+1) {
+  left: 0;
+  right: auto; }
+
+.flipbook .page:nth-child(2n) {
+  left: auto;
+  right: 0; }
+
+.flipbook .page img {
+  width: 100%;
+  vertical-align: middle; }
+
+.flipbook-arrows {
+  margin: auto;
+  max-width: 1008px;
+  position: absolute;
+  top: 36%;
+  width: 100%;
+  z-index: 300; }
+
+.flipbook-arrows .arrows {
+  width: 6%;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+  overflow: hidden; }
+
+.flipbook-arrows img {
+  width: 100%;
+  height: auto; }
+
+.flipbook-arrows .arrows.left {
+  left: 2%;
+  position: absolute;
+  right: auto; }
+
+.flipbook-arrows .arrows.right {
+  left: auto;
+  position: absolute;
+  right: 2%; }
+
+.flipbook-arrows .arrows.inactive {
+  opacity: 0.3;
+  cursor: not-allowed; }
+
+.flipbook-info-container {
+  overflow: hidden; }
+
+.destination-container {
+  width: 61%;
+  /*max-width:395px;*/
+  max-width: 356px;
+  float: left;
+  overflow: hidden;
+  padding-left: 4%; }
+
+.destination-container img {
+  display: block;
+  float: left; }
+
+.destination-container .title {
+  width: 28%; }
+
+.destination-container .destination {
+  width: 21%;
+  float: left;
+  display: block;
+  background-image: url(/img/dest_bg.png);
+  background-size: cover;
+  cursor: pointer; }
+
+.destination-container .destination img {
+  width: 100%;
+  opacity: 0.3; }
+
+.destination-container .destination.active img {
+  opacity: 1; }
+
+.destination-container .end {
+  width: 8.7%; }
+
+.destination-container a:hover {
+  opacity: 1; }
+
+.destination-container .destination img:hover {
+  opacity: 1; }
+
+.pagination-container {
+  font-size: 18px;
+  font-weight: 400;
+  color: #3c7c99;
+  width: 31%;
+  float: right;
+  text-align: right;
+  padding: 2% 4% 0 0; }
+
+.pagination-container .present-num {
+  font-size: 20px;
+  border: 1px solid #c0cecc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 2px 10px;
+  margin-left: 7px; }
+
+.pagination-container .seperator {
+  font-size: 22px;
+  padding: 0 7px; }
+
+.pagination-container .total-num {
+  font-size: 20px; }
+
+@media (max-width: 650px) {
+  .destination-container {
+    float: none;
+    margin: 5% auto auto auto;
+    padding-left: 0;
+    width: 100%;
+    /*max-width:356px;*/ }
+  .pagination-container {
+    float: none;
+    padding: 2% 0 0;
+    text-align: center;
+    width: 100%; } }
+
+.form-container {
+  /*padding: 13px 0 0 20px;*/
+  max-width: 504px;
+  position: relative; }
+
+.form-container h2 {
+  color: #032e58;
+  font-size: 16px;
+  font-weight: 400;
+  left: 4%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  text-transform: uppercase;
+  top: 4%; }
+
+.form-container h3 {
+  color: rgba(3, 46, 88, 0.54);
+  font-size: 14px;
+  font-weight: 400;
+  left: 4%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 10%; }
+
+.form-container textarea {
+  background-color: transparent;
+  border: 0 none;
+  color: rgba(3, 46, 88, 0.8);
+  font-size: 16px;
+  font-weight: 400;
+  height: 73%;
+  left: 4%;
+  padding: 4%;
+  position: absolute;
+  top: 18%;
+  width: 95%; }
+
+@media (max-width: 670px) {
+  .message-page .page {
+    width: 100%;
+    float: none;
+    position: relative;
+    max-width: 504px;
+    margin: auto;
+    left: 4%; }
+  .message-page .flipbook-placeholder {
+    display: none; } }
+
+@media (max-width: 370px) {
+  .form-container h2 {
+    top: -1%; }
+  .form-container h3 {
+    top: 8%; } }
