--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -196,8 +196,8 @@
             </ul>
             <div class="w-col-md-4">
                 <!--added div-->
-                <a href="" target="_self" ng-click="main.saveChanges()" data-toggle="modal" data-target="#myModal" class="footer-btn">My characters are ready</a>
-                <a href="javascript:void(0);" class="skip-btn">SKIP TO PREVIEW THE BOOK</a>
+                <a href="/previewfamily" target="_self" ng-click="main.saveChanges()" class="footer-btn">My characters are ready</a>
+                <a href="/previewbook" class="skip-btn">SKIP TO PREVIEW THE BOOK</a>
             </div>
         </div>
     </section><!-- end id:bottomPartWrapper -->
