--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -196,7 +196,7 @@
             </ul>
             <div class="w-col-md-4">
                 <!--added div-->
-                <a href="/previewfamily" target="_self" ng-click="main.saveChanges()" class="footer-btn">My characters are ready</a>
+                <a ng-href="/previewfamily" target="_self" ng-click="main.saveChanges()" class="footer-btn">My characters are ready</a>
                 <a href="/previewbook" class="skip-btn">SKIP TO PREVIEW THE BOOK</a>
             </div>
         </div>
